--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -36,6 +36,14 @@
         {% if posts.has_next %}
             <a href="?page={{ posts.next_page_number }}">next</a>
         {% endif %}
+        <br />
+        {% for num in posts.paginator.page_range %}
+		    {% ifequal num posts.number %}
+		        <span class="current"><b>{{ num }}</b></span>
+		    {% else %}
+		        <a href="?page={{ num }}"> {{ num }}</a>
+		    {% endifequal %} 
+		{% endfor %}
     </span>
 </div>
 </div>
